[gd_scene load_steps=6 format=2]

[ext_resource path="res://nave.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/HUD/ContenedorInformacion.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FadeCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeCanvas"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )

[node name="TextureRect" type="TextureRect" parent="FadeCanvas/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -114.0
margin_right = 151.0
margin_bottom = 114.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeCanvas"]
anims/default = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[node name="InfoZonaRecarga" parent="." instance=ExtResource( 3 )]

[node name="InfoMeteoritos" parent="." instance=ExtResource( 3 )]

[node name="Label" parent="InfoMeteoritos" index="1"]
text = "Meteoritos REstantes:"

[node name="InfoTiempoRestante" parent="." instance=ExtResource( 3 )]

[editable path="InfoZonaRecarga"]
[editable path="InfoMeteoritos"]
[editable path="InfoTiempoRestante"]
